[package]
name = "patrie"
version = "0.0.1"
authors = ["theseriousadult <jack@gallabytes.com>"]
license = "AGPL-3.0-or-later"
edition = "2018"
description = "a trie which skips single-child nodes"

[dependencies]
smallvec = "1.4.0"
slab = "0.4.2"

[dev-dependencies]
proptest = "0.9.6"
proptest-derive = "0.1.2"

# do some optimization in test mode
# either of these on their own are not that helpful, but put together they 10x our test speed
[profile.test]
opt-level = 3 
lto = "thin" 
